fix - CTA Button has wrong font color for dark and darkest theme

--- a/less/components/consonant/theme.less
+++ b/less/components/consonant/theme.less
@@ -434,7 +434,7 @@
             border-color: @consonantGray800;
             background-color: @consonantBaseColor;
 
-            span {
+            &:not(&--cta) span {
                 color: @consonantGray800;
             }
 
@@ -443,7 +443,7 @@
                 background-color: @consonantGray800;
             }
 
-            &:hover span {
+            &:hover:not(&--cta) span {
                 color: @consonantBaseColor;
             }
 
@@ -452,7 +452,7 @@
                 background-color: @consonantGray900;
             }
 
-            &:active span {
+            &:active:not(&--cta) span {
                 color: @consonantBaseColor;
             }
 
@@ -464,26 +464,14 @@
                 border-color: @consonantBlue500;
                 background-color: @consonantBlue500;
 
-                span {
-                    color: @consonantBaseColor;
-                }
-
                 &:hover {
                     border-color: @consonantBlue600;
                     background-color: @consonantBlue600;
                 }
 
-                &:hover span {
-                    color: @consonantBaseColor;
-                }
-
                 &:active {
                     border-color: @consonantBlue700;
                     background-color: @consonantBlue700;
-                }
-
-                &:active span {
-                    color: @consonantBaseColor;
                 }
             }
         }
